--- a/Index.html
+++ b/Index.html
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-    <section id="resume">
+    <section id="resume.html">
     
         <div class="section-content">
             <center>
