--- a/Index.html
+++ b/Index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="sneka.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Sneka.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Sneka.R</h1>
             <p>Am computer science student </p>
         </div>
@@ -165,7 +165,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Index.html" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
